--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,12 @@
     -->
     <title>React Redux App</title>
     <script src="http://localhost:8097"></script>
+    <link
+      href="https://releases.transloadit.com/uppy/v2.9.3/uppy.min.css"
+      rel="stylesheet"
+    />
+
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
